--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_auth: ^4.0.0
+  firebase_auth:
+    git:
+      url: git@github.com:danielroek/flutterfire.git
+      path: packages/firebase_auth/firbase_auth
   firebase_core: ^2.3.0
   meta: ^1.3.0
   equatable: ^2.0.0
