--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   firebase_auth:
     git:
-      url: git@github.com:danielroek/flutterfire.git
+      url: https://github.com/danielroek/flutterfire
       path: packages/firebase_auth/firebase_auth
   firebase_core: ^2.3.0
   meta: ^1.3.0
